--- a/app.json
+++ b/app.json
@@ -22,8 +22,21 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#2563eb"
       },
-      "package": "com.bible.reading365"
+      "package": "com.bible.reading365",
+      "permissions": [
+        "RECEIVE_BOOT_COMPLETED",
+        "SCHEDULE_EXACT_ALARM"
+      ]
     },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#4a6da7"
+        }
+      ]
+    ],
     "web": {
       "favicon": "./assets/favicon.png"
     },
