--- a/app.json
+++ b/app.json
@@ -25,7 +25,8 @@
       "package": "com.bible.reading365",
       "permissions": [
         "RECEIVE_BOOT_COMPLETED",
-        "SCHEDULE_EXACT_ALARM"
+        "SCHEDULE_EXACT_ALARM",
+        "POST_NOTIFICATIONS"
       ]
     },
     "plugins": [
